Fixed overflow on groups page

--- a/webapp/emshare/theme/styles/custom.css
+++ b/webapp/emshare/theme/styles/custom.css
@@ -131,3 +131,8 @@ h1, h2 {
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	
 }
+
+
+div#emselectable {
+	overflow:auto;
+}
